--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "genetic algorithm simulation"
+name = "genetic-algorithm-simulation"
 version = "0.1.0"
 description = "This project is a Python-based Genetic Algorithm (GA) simulator with an interactive GUI using Tkinter and visualization using Pygame. It demonstrates the use of evolutionary principles such as selection, mutation, crossover, and more advanced techniques like mutualism, communalism, elitism, and adaptive mutation rates."
 authors = ["Dumbo-programmer <rony.120285d2k@gmail.com>"]
@@ -15,14 +15,13 @@ certifi = "2024.2.2"
 cffi = "1.16.0"
 chardet = "5.2.0"
 charset-normalizer = "3.3.2"
-colorama = "0.3.9"
-conan = "1.6.0"
+colorama = "0.4.3"
+conan = "2.0.0"  # Updated version
 contourpy = "1.2.1"
-cryptography = "42.0.8"
 cssselect = "1.2.0"
 cycler = "0.12.1"
 deprecation = "2.0.7"
-distro = "1.1.0"
+distro = "1.8.0"
 fasteners = "0.19"
 fonttools = "4.53.0"
 future = "0.16.0"
@@ -44,8 +43,7 @@ packaging = "24.0"
 patch = "1.16"
 patch-ng = "1.17.4"
 pdf2image = "1.17.0"
-pdfminer.six = "20231228"
-pdfplumber = "0.11.1"
+pdfplumber = "0.5.28"  # Downgraded version for compatibility
 pdfquery = "0.4.3"
 pillow = "10.3.0"
 pip = "24.1"
@@ -62,7 +60,7 @@ pyquery = "2.0.0"
 PySocks = "1.7.1"
 python-dateutil = "2.9.0.post0"
 python-docx = "1.1.2"
-PyYAML = "3.12"
+PyYAML = "5.1"
 requests = "2.31.0"
 roman = "4.2"
 selenium = "4.19.0"
